CSS fix for optimal readability.

--- a/_scss/_blog.scss
+++ b/_scss/_blog.scss
@@ -170,6 +170,14 @@
 .blog-post {
   font-size: 1.2em;
   margin-bottom: 20px;
+
+  h3 {
+    margin:30px 0px 20px 0px;
+  }
+
+  p {
+    line-height:1.8em;
+  }
 }
 
 .category-default {
